Point to weather icon sources

--- a/app/src/main/res/drawable/news_ap.xml
+++ b/app/src/main/res/drawable/news_ap.xml
@@ -1,4 +1,4 @@
-<!-- AP Logo Copyright 2012 The Associated Press. -->
+<!-- AP Logo Copyright 2012 The Associated Press -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
