--- a/app/src/main/res/drawable/partly_cloudy_night.xml
+++ b/app/src/main/res/drawable/partly_cloudy_night.xml
@@ -1,3 +1,5 @@
+<!-- (CC BY-SA 4.0) Max Braun https://goo.gl/GwN3xB -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="96dp"
     android:height="96dp"
