--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,6 +26,7 @@
       android:layout_height="wrap_content"
       android:layout_alignBottom="@id/temperature"
       android:layout_marginBottom="15dp"
+      android:layout_marginLeft="5dp"
       android:layout_toRightOf="@id/temperature"
       tools:src="@drawable/partly_cloudy_day"/>
 
