Hide system bars for better prototyping on tablets and phones

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
 <resources>
   <style name="AppTheme" parent="@style/Theme.Leanback">
     <item name="android:background">#ff000000</item>
+    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowContentOverlay">@null</item>
   </style>
 
   <style name="BaseTextStyle">
