--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -76,55 +76,54 @@
       android:gravity="right"/>
 
   <!-- News -->
-  <TextView
-      android:id="@+id/news_4"
-      style="@style/NewsStyle"
+  <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
-      android:layout_marginBottom="@dimen/inter_group_margin"
-      android:drawableLeft="@drawable/news_ap"
-      android:drawablePadding="@dimen/icon_margin"
-      android:gravity="left"
-      tools:text="Obama, Sanders at the White House: Nice chat but that's all"/>
+      android:orientation="vertical">
+    <TextView
+        android:id="@+id/news_1"
+        style="@style/NewsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/inter_group_margin"
+        android:drawableLeft="@drawable/news_ap"
+        android:drawablePadding="@dimen/icon_margin"
+        tools:text="Obama, Sanders at the White House: Nice chat but that's all"/>
 
-  <TextView
-      android:id="@+id/news_3"
-      style="@style/NewsStyle"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@id/news_4"
-      android:layout_alignParentLeft="true"
-      android:layout_marginBottom="@dimen/intra_group_margin"
-      android:drawableLeft="@drawable/news_ap"
-      android:drawablePadding="@dimen/icon_margin"
-      android:gravity="left"
-      tools:text="Debate feud injects fresh chaos into GOP primary"/>
+    <TextView
+        android:id="@+id/news_2"
+        style="@style/NewsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/intra_group_margin"
+        android:drawableLeft="@drawable/news_ap"
+        android:drawablePadding="@dimen/icon_margin"
+        tools:text="Debate feud injects fresh chaos into GOP primary"/>
 
-  <TextView
-      android:id="@+id/news_2"
-      style="@style/NewsStyle"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@id/news_3"
-      android:layout_alignParentLeft="true"
-      android:layout_marginBottom="@dimen/intra_group_margin"
-      android:drawableLeft="@drawable/news_ap"
-      android:drawablePadding="@dimen/icon_margin"
-      android:gravity="left"
-      tools:text="Rancher killed in standoff vowed to die before going to jail"/>
+    <TextView
+        android:id="@+id/news_3"
+        style="@style/NewsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/intra_group_margin"
+        android:drawableLeft="@drawable/news_ap"
+        android:drawablePadding="@dimen/icon_margin"
+        tools:text="Rancher killed in standoff vowed to die before going to jail"/>
 
-  <TextView
-      android:id="@+id/news_1"
-      style="@style/NewsStyle"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_above="@id/news_2"
-      android:layout_alignParentLeft="true"
-      android:layout_marginBottom="@dimen/intra_group_margin"
-      android:drawableLeft="@drawable/news_ap"
-      android:drawablePadding="@dimen/icon_margin"
-      android:gravity="left"
-      tools:text="Authorities: Last activists should leave wildlife preserve"/>
+    <TextView
+        android:id="@+id/news_4"
+        style="@style/NewsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/intra_group_margin"
+        android:drawableLeft="@drawable/news_ap"
+        android:drawablePadding="@dimen/icon_margin"
+        tools:text="Authorities: Last activists should leave wildlife preserve"/>
+  </LinearLayout>
 </RelativeLayout>
