--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -128,4 +128,13 @@
         android:drawablePadding="@dimen/icon_margin"
         tools:text="Authorities: Last activists should leave wildlife preserve"/>
   </LinearLayout>
+
+  <!-- Body -->
+  <net.maxbraun.mirror.BodyView
+      android:id="@+id/body"
+      android:layout_width="250dp"
+      android:layout_height="200dp"
+      android:layout_alignParentRight="true"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="@dimen/intra_group_margin"/>
 </RelativeLayout>
