--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,8 +3,8 @@
 <resources>
   <dimen name="outside_padding">25dp</dimen>
   <dimen name="icon_margin">10dp</dimen>
-  <dimen name="inter_group_margin">15dp</dimen>
-  <dimen name="intra_group_margin">10dp</dimen>
+  <dimen name="precipitation_margin">15dp</dimen>
+  <dimen name="news_line_margin">10dp</dimen>
   <dimen name="small_text_size">20dp</dimen>
   <dimen name="medium_text_size">30dp</dimen>
   <dimen name="large_text_size">100dp</dimen>
