--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -2,12 +2,15 @@
 
 <resources>
   <!-- Get the Dark Sky API key from: https://darksky.net/dev/ -->
-  <string name="dark_sky_api_key"></string>
+  <string name="dark_sky_api_key">DARK_SKY_API_KEY</string>
 
   <!-- Get the Withings OAuth keys from: http://oauth.withings.com/api -->
-  <string name="withings_consumer_key"></string>
-  <string name="withings_nonce"></string>
-  <string name="withings_signature"></string>
-  <string name="withings_token"></string>
-  <string name="withings_userid"></string>
+  <string name="withings_consumer_key">WITHINGS_CONSUMER_KEY</string>
+  <string name="withings_nonce">WITHINGS_NONCE</string>
+  <string name="withings_signature">WITHINGS_SIGNATURE</string>
+  <string name="withings_token">WITHINGS_TOKEN</string>
+  <string name="withings_userid">WITHINGS_USERID</string>
+
+  <!-- Get the Google Maps Directions API key from: https://developers.google.com/maps/documentation/directions/ -->
+  <string name="google_maps_directions_api_key">GOOGLE_MAPS_DIRECTIONS_API_KEY</string>
 </resources>
