--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,13 @@
     <item name="android:maxLines">3</item>
   </style>
 
+  <style name="CommuteTextStyle" parent="BaseTextStyle">
+    <item name="android:textSize">@dimen/small_text_size</item>
+    <item name="android:fontFamily">sans-serif-light</item>
+    <item name="android:ellipsize">end</item>
+    <item name="android:singleLine">true</item>
+  </style>
+
   <style name="TimeStyle" parent="BaseTextStyle">
     <item name="android:textSize">@dimen/large_text_size</item>
     <item name="android:fontFamily">sans-serif-thin</item>
