--- a/app/src/main/res/drawable/news_ap.xml
+++ b/app/src/main/res/drawable/news_ap.xml
@@ -3,9 +3,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="72.0"
-    android:viewportWidth="72.0">
+    android:viewportWidth="72.0"
+    android:viewportHeight="72.0">
   <path
-      android:fillColor="#FFF5F5F5"
-      android:pathData="M64.6,7.4l-3.2,3.2c-0.8,0.8 -2.1,0.8 -2.8,0l-3.2,-3.2c-0.8,-0.8 -2.1,-0.8 -2.8,0l-3.2,3.2c-0.8,0.8 -2.1,0.8 -2.8,0l-3.2,-3.2c-0.8,-0.8 -2.1,-0.8 -2.8,0l-3.2,3.2c-0.8,0.8 -2.1,0.8 -2.8,0l-3.2,-3.2c-0.8,-0.8 -2.1,-0.8 -2.8,0l-3.2,3.2c-0.8,0.8 -2.1,0.8 -2.8,0l-3.2,-3.2c-0.8,-0.8 -2.1,-0.8 -2.8,0l-3.2,3.2c-0.8,0.8 -2.1,0.8 -2.8,0L7.4,7.4C6.6,6.6 6,6.9 6,8v56c0,1.1 0.9,2 2,2h56c1.1,0 2,-0.9 2,-2V8C66,6.9 65.4,6.6 64.6,7.4zM38.3,20.9h7.5c5.6,0 8.9,2.7 8.9,7.6c0,4.8 -3.3,7.6 -8.9,7.6h-0.6v-4.4h0.3c2.4,0 3.8,-1.2 3.8,-3.2c0,-2.1 -1.4,-3.2 -3.8,-3.2h-2.1v17.3h-5.2V20.9zM24.4,20.9h6l7.2,21.7h-5.4l-1.1,-3.3h-5.9l1.3,-4.4h3.2l-2.5,-7.7l-4.9,15.3h-5.2L24.4,20.9zM57.5,57.6H14.5l0,-5.2h42.9V57.6z"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M64.59,7.41l-3.17,3.17a2,2 0,0 1,-2.83 0L55.41,7.41a2,2 0,0 0,-2.83 0l-3.17,3.17a2,2 0,0 1,-2.83 0L43.41,7.41a2,2 0,0 0,-2.83 0l-3.17,3.17a2,2 0,0 1,-2.83 0L31.41,7.41a2,2 0,0 0,-2.83 0l-3.17,3.17a2,2 0,0 1,-2.83 0L19.41,7.41a2,2 0,0 0,-2.83 0l-3.17,3.17a2,2 0,0 1,-2.83 0L7.41,7.41C6.64,6.64 6,6.9 6,8V64a2,2 0,0 0,2 2H64a2,2 0,0 0,2 -2V8C66,6.9 65.36,6.64 64.59,7.41Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M38.33,20.94h7.5c5.6,0 8.89,2.73 8.89,7.62s-3.29,7.62 -8.89,7.62h-0.56V31.81h0.34c2.43,0 3.81,-1.19 3.81,-3.25S48,25.31 45.61,25.31H43.52V42.6H38.33Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M24.41,20.94l5.99,0l7.22,21.66l-5.38,0l-1.06,-3.29l-5.85,0l1.27,-4.36l3.18,0l-2.46,-7.66l-4.9,15.31l-5.23,0l7.22,-21.66z"/>
+  <path
+      android:fillColor="#FFFF322E"
+      android:pathData="M14.53,52.41h42.95v5.19h-42.95z"/>
 </vector>
