--- a/app/src/main/res/drawable/trend_down.xml
+++ b/app/src/main/res/drawable/trend_down.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
   <path
-      android:fillColor="#FF4CAF50"
+      android:fillColor="@color/green"
       android:pathData="M16,18l2.29,-2.29 -4.88,-4.88 -4,4L2,7.41 3.41,6l6,6 4,-4 6.3,6.29L22,12v6z"/>
 </vector>
