Add commute to compact UI
- Allow combinations of weather, time, and commute
- Use more dimension constants

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,9 +3,15 @@
 <resources>
   <dimen name="outside_padding">25dp</dimen>
   <dimen name="icon_margin">10dp</dimen>
+  <dimen name="icon_margin_compact">20dp</dimen>
+  <dimen name="weather_icon_size">96dp</dimen>
+  <dimen name="weather_icon_size_compact">192dp</dimen>
+  <dimen name="traffic_icon_size">24dp</dimen>
+  <dimen name="traffic_icon_size_compact">48dp</dimen>
   <dimen name="precipitation_margin">15dp</dimen>
   <dimen name="news_line_margin">10dp</dimen>
   <dimen name="small_text_size">20dp</dimen>
+  <dimen name="small_text_size_compact">40dp</dimen>
   <dimen name="medium_text_size">30dp</dimen>
   <dimen name="large_text_size">100dp</dimen>
   <dimen name="large_text_size_compact">200dp</dimen>
