--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,8 +21,8 @@
       tools:text="72°"/>
   <ImageView
       android:id="@+id/icon"
-      android:layout_width="96dp"
-      android:layout_height="96dp"
+      android:layout_width="@dimen/weather_icon_size"
+      android:layout_height="@dimen/weather_icon_size"
       android:scaleType="fitXY"
       android:layout_alignBottom="@id/temperature"
       android:layout_marginBottom="15dp"
@@ -147,15 +147,15 @@
         android:orientation="horizontal">
       <ImageView
           android:id="@+id/travelMode"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="@dimen/traffic_icon_size"
+          android:layout_height="@dimen/traffic_icon_size"
           android:layout_gravity="center_vertical"
           tools:src="@drawable/driving"
           android:layout_marginRight="@dimen/icon_margin"/>
       <ImageView
           android:id="@+id/trafficTrend"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="@dimen/traffic_icon_size"
+          android:layout_height="@dimen/traffic_icon_size"
           android:layout_gravity="center_vertical"
           tools:src="@drawable/trend_up"
           android:layout_marginRight="@dimen/icon_margin"/>
