--- a/app/src/main/res/layout/activity_home_compact.xml
+++ b/app/src/main/res/layout/activity_home_compact.xml
@@ -5,47 +5,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true"
-    android:paddingLeft="@dimen/outside_padding"
-    android:paddingRight="@dimen/outside_padding">
-
-  <!-- Weather -->
+    android:keepScreenOn="true">
   <LinearLayout
-      android:id="@+id/weather"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
       android:layout_alignParentBottom="true"
-      android:orientation="horizontal">
-    <TextView
-        android:id="@+id/temperature"
-        style="@style/TemperatureStyleCompact"
+      android:paddingLeft="@dimen/outside_padding"
+      android:paddingRight="@dimen/outside_padding"
+      android:orientation="vertical">
+
+    <!-- Weather -->
+    <LinearLayout
+        android:id="@+id/weather"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        tools:text="72°"/>
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="192dp"
-        android:layout_height="192dp"
-        android:scaleType="fitXY"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="10dp"
-        tools:src="@drawable/partly_cloudy_day"/>
-  </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+      <TextView
+          android:id="@+id/temperature"
+          style="@style/TemperatureStyleCompact"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom"
+          tools:text="72°"/>
+      <ImageView
+          android:id="@+id/icon"
+          android:layout_width="@dimen/weather_icon_size_compact"
+          android:layout_height="@dimen/weather_icon_size_compact"
+          android:scaleType="fitXY"
+          android:layout_gravity="bottom"
+          android:layout_marginBottom="30dp"
+          android:layout_marginLeft="10dp"
+          tools:src="@drawable/partly_cloudy_day"/>
+    </LinearLayout>
 
-  <!-- Time and date -->
-  <TextClock
-      android:id="@+id/time"
-      style="@style/TimeStyleCompact"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_centerHorizontal="true"
-      android:layout_alignParentBottom="true"
-      android:format12Hour="h\uee01mm"
-      android:format24Hour="H\uee01mm"
-      android:gravity="center_horizontal"
-      tools:text="12\uee0134"
-      android:visibility="gone"/>
+    <!-- Time and date -->
+    <TextClock
+        android:id="@+id/time"
+        style="@style/TimeStyleCompact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:format12Hour="h\uee01mm"
+        android:format24Hour="H\uee01mm"
+        android:gravity="center_horizontal"
+        tools:text="12\uee0134"/>
+
+    <!-- Commute -->
+    <FrameLayout
+        android:id="@+id/commute"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center_vertical"
+          android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/travelMode"
+            android:layout_width="@dimen/traffic_icon_size_compact"
+            android:layout_height="@dimen/traffic_icon_size_compact"
+            android:layout_gravity="center_vertical"
+            tools:src="@drawable/driving"
+            android:layout_marginRight="@dimen/icon_margin_compact"/>
+        <ImageView
+            android:id="@+id/trafficTrend"
+            android:layout_width="@dimen/traffic_icon_size_compact"
+            android:layout_height="@dimen/traffic_icon_size_compact"
+            android:layout_gravity="center_vertical"
+            tools:src="@drawable/trend_up"
+            android:layout_marginRight="@dimen/icon_margin_compact"/>
+        <TextView
+            android:id="@+id/commuteText"
+            style="@style/CommuteTextStyleCompact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            tools:text="39 mins via US-101"/>
+      </LinearLayout>
+    </FrameLayout>
+  </LinearLayout>
 </RelativeLayout>
