--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -75,10 +75,22 @@
       android:gravity="right"
       tools:text="Sunday\nMarch 4"/>
 
+  <!-- Body -->
+  <net.maxbraun.mirror.BodyView
+      android:id="@+id/body"
+      android:layout_width="220dp"
+      android:layout_height="180dp"
+      android:layout_alignParentRight="true"
+      android:layout_alignParentBottom="true"
+      android:layout_marginLeft="@dimen/icon_margin"
+      android:layout_marginBottom="@dimen/news_line_margin"/>
+
   <!-- News -->
   <LinearLayout
-      android:layout_width="wrap_content"
+      android:id="@+id/news"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_toLeftOf="@id/body"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:orientation="vertical">
@@ -89,9 +101,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="@dimen/news_line_margin"
-        android:drawableLeft="@drawable/news_ap"
+        android:drawableLeft="@drawable/nyt"
         android:drawablePadding="@dimen/icon_margin"
-        tools:text="Obama, Sanders at the White House: Nice chat but that's all"/>
+        tools:text="Egypt Imposes Steep Fuel Price Increases"/>
     <TextView
         android:id="@+id/news_2"
         style="@style/NewsStyle"
@@ -99,9 +111,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="@dimen/news_line_margin"
-        android:drawableLeft="@drawable/news_ap"
+        android:drawableLeft="@drawable/nyt"
         android:drawablePadding="@dimen/icon_margin"
-        tools:text="Debate feud injects fresh chaos into GOP primary"/>
+        tools:text="How Trump Diverged From Other Presidents and Embraced a Policy of Separating Migrant Families"/>
     <TextView
         android:id="@+id/news_3"
         style="@style/NewsStyle"
@@ -109,9 +121,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="@dimen/news_line_margin"
-        android:drawableLeft="@drawable/news_ap"
+        android:drawableLeft="@drawable/nyt"
         android:drawablePadding="@dimen/icon_margin"
-        tools:text="Rancher killed in standoff vowed to die before going to jail"/>
+        tools:text="China’s Official News Media Sharply Criticize Trump"/>
     <TextView
         android:id="@+id/news_4"
         style="@style/NewsStyle"
@@ -119,19 +131,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="@dimen/news_line_margin"
-        android:drawableLeft="@drawable/news_ap"
+        android:drawableLeft="@drawable/nyt"
         android:drawablePadding="@dimen/icon_margin"
-        tools:text="Authorities: Last activists should leave wildlife preserve"/>
+        tools:text="FIFA Prepares for a Post-Trump World"/>
+    <TextView
+        android:id="@+id/news_5"
+        style="@style/NewsStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginBottom="@dimen/news_line_margin"
+        android:drawableLeft="@drawable/nyt"
+        android:drawablePadding="@dimen/icon_margin"
+        tools:text="By Land or by Sea, U.S. Open Golfers Got Creative About Their Lodging"/>
   </LinearLayout>
-
-  <!-- Body -->
-  <net.maxbraun.mirror.BodyView
-      android:id="@+id/body"
-      android:layout_width="250dp"
-      android:layout_height="180dp"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentBottom="true"
-      android:layout_marginBottom="@dimen/news_line_margin"/>
 
   <!-- Commute -->
   <FrameLayout
