--- a/app/src/main/res/layout/activity_home_compact.xml
+++ b/app/src/main/res/layout/activity_home_compact.xml
@@ -90,7 +90,10 @@
     <net.maxbraun.mirror.BodyView
         xmlns:body="http://schemas.android.com/apk/res/net.maxbraun.mirror"
         android:id="@+id/body"
-        body:lineWidth="@dimen/body_line_width_compact"
+        body:smoothLineWidth="@dimen/body_smooth_line_width_compact"
+        body:smoothLineColor="@color/white"
+        body:rawLineWidth="@dimen/body_raw_line_width_compact"
+        body:rawLineColor="@color/gray"
         body:labelMargin="@dimen/body_label_margin_compact"
         body:dotRadius="@dimen/body_dot_radius_compact"
         android:layout_width="800dp"
