--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
 <resources>
   <color name="green">#FF4CAF50</color>
   <color name="red">#FFF44336</color>
+  <color name="white">#FFFFFFFF</color>
+  <color name="gray">#40FFFFFF</color>
 </resources>
