--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -17,8 +17,10 @@
   <dimen name="large_text_size_compact">200dp</dimen>
   <dimen name="body_dot_radius">3dp</dimen>
   <dimen name="body_dot_radius_compact">6dp</dimen>
-  <dimen name="body_line_width">2dp</dimen>
-  <dimen name="body_line_width_compact">4dp</dimen>
+  <dimen name="body_smooth_line_width">2dp</dimen>
+  <dimen name="body_raw_line_width">1.5dp</dimen>
+  <dimen name="body_smooth_line_width_compact">4dp</dimen>
+  <dimen name="body_raw_line_width_compact">3dp</dimen>
   <dimen name="body_label_margin">6dp</dimen>
   <dimen name="body_label_margin_compact">12dp</dimen>
 </resources>
