Use dots instead of lines for the raw weight data

--- a/app/src/main/res/layout/activity_home_compact.xml
+++ b/app/src/main/res/layout/activity_home_compact.xml
@@ -92,10 +92,10 @@
         android:id="@+id/body"
         body:smoothLineWidth="@dimen/body_smooth_line_width_compact"
         body:smoothLineColor="@color/white"
-        body:rawLineWidth="@dimen/body_raw_line_width_compact"
-        body:rawLineColor="@color/gray"
         body:labelMargin="@dimen/body_label_margin_compact"
-        body:dotRadius="@dimen/body_dot_radius_compact"
+        body:highlightDotRadius="@dimen/body_highlight_dot_radius_compact"
+        body:rawDotRadius="@dimen/body_raw_dot_radius_compact"
+        body:rawDotColor="@color/gray"
         android:layout_width="800dp"
         android:layout_height="400dp"
         android:layout_gravity="center_horizontal"
