--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,8 +6,9 @@
     <attr name="smoothLineWidth" format="dimension"/>
     <attr name="smoothLineColor" format="color"/>
     <attr name="rawLineWidth" format="dimension"/>
-    <attr name="rawLineColor" format="color"/>
+    <attr name="rawDotColor" format="color"/>
     <attr name="labelMargin" format="dimension"/>
-    <attr name="dotRadius" format="dimension"/>
+    <attr name="highlightDotRadius" format="dimension"/>
+    <attr name="rawDotRadius" format="dimension"/>
   </declare-styleable>
 </resources>
