--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,12 +15,12 @@
   <dimen name="medium_text_size">30dp</dimen>
   <dimen name="large_text_size">100dp</dimen>
   <dimen name="large_text_size_compact">200dp</dimen>
-  <dimen name="body_dot_radius">3dp</dimen>
-  <dimen name="body_dot_radius_compact">6dp</dimen>
+  <dimen name="body_highlight_dot_radius">3dp</dimen>
+  <dimen name="body_highlight_dot_radius_compact">6dp</dimen>
+  <dimen name="body_raw_dot_radius">1.5dp</dimen>
+  <dimen name="body_raw_dot_radius_compact">3dp</dimen>
   <dimen name="body_smooth_line_width">2dp</dimen>
-  <dimen name="body_raw_line_width">1.5dp</dimen>
   <dimen name="body_smooth_line_width_compact">4dp</dimen>
-  <dimen name="body_raw_line_width_compact">3dp</dimen>
   <dimen name="body_label_margin">6dp</dimen>
   <dimen name="body_label_margin_compact">12dp</dimen>
 </resources>
