--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,10 +81,10 @@
       android:id="@+id/body"
       body:smoothLineWidth="@dimen/body_smooth_line_width"
       body:smoothLineColor="@color/white"
-      body:rawLineWidth="@dimen/body_raw_line_width"
-      body:rawLineColor="@color/gray"
       body:labelMargin="@dimen/body_label_margin"
-      body:dotRadius="@dimen/body_dot_radius"
+      body:highlightDotRadius="@dimen/body_highlight_dot_radius"
+      body:rawDotRadius="@dimen/body_raw_dot_radius"
+      body:rawDotColor="@color/gray"
       android:layout_width="220dp"
       android:layout_height="180dp"
       android:layout_alignParentRight="true"
