--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -7,11 +7,11 @@
   <!-- Get the AirNow API key from: https://docs.airnowapi.org -->
   <string name="air_now_api_key">AIR_NOW_API_KEY</string>
 
-  <!-- Get the Nokia Health API keys from: http://developer.health.nokia.com/oauth2/ -->
+  <!-- Get the Withings API keys from: https://developer.withings.com/oauth2/ -->
   <!-- Consider using: https://colab.research.google.com/drive/1bkU7T5uv368nTQLN66TosILYCmIq0L6F -->
-  <string name="nokia_health_client_id">NOKIA_HEALTH_CLIENT_ID</string>
-  <string name="nokia_health_client_secret">NOKIA_HEALTH_CLIENT_SECRET</string>
-  <string name="nokia_health_refresh_token">NOKIA_HEALTH_REFRESH_TOKEN</string>
+  <string name="withings_client_id">WITHINGS_CLIENT_ID</string>
+  <string name="withings_client_secret">WITHINGS_CLIENT_SECRET</string>
+  <string name="withings_refresh_token">WITHINGS_REFRESH_TOKEN</string>
 
   <!-- Get the Google Maps Directions API key from: https://developers.google.com/maps/documentation/directions/ -->
   <string name="google_maps_directions_api_key">GOOGLE_MAPS_DIRECTIONS_API_KEY</string>
