--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-  <style name="AppTheme" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+  <style name="AppTheme" parent="@style/Theme.AppCompat.NoActionBar">
     <item name="android:background">#ff000000</item>
     <item name="android:windowFullscreen">true</item>
     <item name="android:windowContentOverlay">@null</item>
